@@ -23,6 +23,7 @@ Version 1.1.4 to be released
 - Enh #954: Refactored CActiveRecord and CActiveFinder so that CActiveRecord::with() always returns the AR object itself (Qiang)
 - Enh #1073: Allow dependencies to be set in constructor of CChainedCacheDependency. Also allow dependencies to be specified as configurations. (Qiang)
 - Enh #1087: Allow CDbCriteria to be used as dynamic relational query options (Qiang)
+- Enh #1222: Added relations information to Gii generated model's PHPDoc (Sam Dark)
 - Enh #1347: Added CPagination::validateCurrentPage (Qiang)
 - Enh #1358: Enhanced the 'together' option of HAS_MANY/MANY_MANY relations so that setting it true will ensure the related table is joined with the primary table in a single SQL (Qiang)
 - Enh #1359: Added CActiveRecord::countByAttributes (Qiang)
